--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-Creato file _config.yml per personalizzare GitHub Pages
 title: "Memorie dal Villaggio MSN"
 description: "La Bibbia digitale di Paola: liturgie, preghiere e vangeli del Kernel."
-theme: jekyll-theme-midnight
+theme: jekyll-theme-cayman
 markdown: kramdown
