--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 title: "Memorie dal Villaggio MSN"
 description: "La Bibbia digitale di Paola: liturgie, preghiere e vangeli del Kernel."
 remote_theme: pages-themes/cayman
