--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Informazioni principali
-title: "Memorie dal Villaggio MSN - Trovatella"
-description: "Ricordi, video e testimonianze dal Villaggio MSN: una raccolta viva dei primi anni 2000."
+title: "Apocryphal Nerd Bible from MSN Village"
+description: "Atlante digitale di Paola Blondet — La Trovatella Digitale"
+keywords: "MSN, Atlante, Nerd Bible, Apocryphal Bible, Kernel, Linus Torvalds, EU case T-604/18, Digital Sovereignty, Microsoft, Google, Bibbia Nerd Apocrifa dal Villaggio MSN"
 lang: en-US
 url: "https://trovatella.github.io"
 baseurl: "/-Memorie-dal-Villaggio-MSN"
